--- a/1125/table.css
+++ b/1125/table.css
@@ -2,7 +2,7 @@ table {
     border-collapse: collapse;
 }
 th, td {
-    border: this solid grey;
+    border: thin solid grey;
 }
 th {
     background-color: lightgrey;
